# financial-ML-CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py
cpp_modules/: CMakeLists.txt
cpp_modules/src/utils/: DataStructures.cpp  HelpingCalculations.cpp  HelpingCalculations.h
notebooks/: chptr2.ipynb  chptr3.ipynb  data_processing.ipynb  sampling.ipynb
src/preprocessing/: sampling.py
src/utils/: DataStructures.h
